# Passdoq

./: .gitignore  BUILD.md  CMakeLists.txt  PROJECT_STATUS.md  QUICKSTART.md  README.md  build_dependencies.sh
docs/: CMakeLists.txt
examples/: CMakeLists.txt
examples/plugins/: ephemeral_datakey.c
examples/scripts/: auto_copy_and_mask.lua
include/: passdoq-api.h  passdoq-module.h  safemem.h  vault.h  version.h
src/: cli.cpp  cli.hpp  crypto.cpp  crypto.hpp  daemon.cpp  daemon.hpp  delivery.cpp  delivery.hpp  indexing.cpp  indexing.hpp  lua.cpp  lua.hpp  main.cpp  memory.cpp  memory.hpp  modules.cpp  modules.hpp  remote.cpp  remote.hpp  runcom.cpp  runcom.hpp  search.cpp  search.hpp  services.cpp  services.hpp  vault.cpp  vault.hpp
tests/: test_crypto.cpp  test_daemon.cpp  test_delivery.cpp  test_indexing.cpp  test_lua.cpp  test_memory.cpp  test_modules.cpp  test_runcom.cpp  test_search.cpp  test_services.cpp  test_vault.cpp
